<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<LinearLayout

		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="@color/white"
		android:backgroundTint="#FFFFFF"
		android:backgroundTintMode="src_atop"
		android:foregroundTint="#FFFFFF"
		android:foregroundTintMode="multiply"
		android:orientation="vertical"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent">


		<LinearLayout
			android:id="@+id/content_container"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:foregroundTint="#FFFFFF"
			android:orientation="vertical"
			android:weightSum="40">

			<LinearLayout
				android:id="@+id/rectangle_10"
				android:layout_width="match_parent"
				android:layout_height="0dp"
				android:layout_marginStart="20dp"
				android:layout_marginTop="20dp"
				android:layout_marginEnd="20dp"
				android:layout_marginBottom="20dp"
				android:layout_weight="3"
				android:background="@drawable/rectangle_10_shape"
				android:orientation="horizontal"
				android:weightSum="10">

				<ImageView
					android:id="@+id/image_8"
					android:layout_width="0dp"
					android:layout_height="match_parent"
					android:layout_marginHorizontal="12dp"
					android:layout_marginVertical="12dp"
					android:layout_weight="1"
					android:contentDescription="image_8"
					android:src="@drawable/image_8" />

				<EditText
					android:id="@+id/search_item"
					android:layout_width="0dp"
					android:layout_height="match_parent"
					android:layout_marginLeft="0dp"
					android:layout_marginTop="0dp"
					android:layout_weight="9"
					android:background="@null"
					android:hapticFeedbackEnabled="false"

					android:hint="Search item"
					android:maxLines="1"
					android:singleLine="true"
					android:textColor="@color/black"
					android:textColorHint="@color/gray"
					android:textSize="21sp" />

			</LinearLayout>

			<!--				<View   android:id="@+id/rectangle_21"-->
			<!--					android:background="@drawable/rectangle_21_shape"-->
			<!--					 android:layout_marginStart="20dp"-->
			<!--					android:layout_marginTop="81dp"-->
			<!--					android:layout_width="109dp"-->
			<!--					android:layout_height="34dp" />-->

			<LinearLayout
				android:id="@+id/ll"
				android:layout_width="100dp"
				android:layout_height="0dp"
				android:layout_marginStart="20dp"
				android:layout_weight="2"
				android:background="@drawable/rectangle_21_shape"
				android:clickable="true"
				android:gravity="center"
				android:orientation="horizontal"
				android:textAlignment="center"
				android:weightSum="5">

				<ImageView
					android:id="@+id/image_16"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:contentDescription="image_16"
					android:paddingLeft="5dp"
					android:src="@drawable/image_16" />

				<TextView
					android:id="@+id/filters"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_weight="3"
					android:paddingLeft="5dp"
					android:text="@string/filters_string"
					android:textColor="@color/filters_color"
					android:textSize="19sp" />

			</LinearLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="0dp"
				android:layout_marginHorizontal="20dp"
				android:layout_marginVertical="10dp"
				android:layout_weight="2">

				<androidx.recyclerview.widget.RecyclerView
					android:id="@+id/categoriesView"
					android:layout_width="wrap_content"
					android:layout_height="match_parent"
					android:orientation="horizontal" />

			</LinearLayout>

			<ImageView
				android:id="@+id/line_1"
				android:layout_width="match_parent"
				android:layout_height="0dp"
				android:layout_marginHorizontal="13dp"
				android:layout_weight="1"
				android:contentDescription="line_1"
				android:src="@drawable/line_1" />

			<ListView
				android:id="@+id/foodItemList"
				android:layout_width="match_parent"
				android:layout_height="0dp"
				android:layout_marginHorizontal="20dp"
				android:layout_marginBottom="5dp"
				android:layout_weight="28"
				android:background="@color/white"
				android:backgroundTint="#FFFFFF"
				android:foregroundTint="#FF0000"
				android:foregroundTintMode="src_in" />

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="0dp"
				android:layout_weight="4"
				android:background="@drawable/rectangle_25_shape"
				android:gravity="center"
				android:orientation="horizontal"
				android:paddingHorizontal="20dp"
				android:weightSum="10">

				<TextView
					android:id="@+id/menuItemsSelectedView"
					android:layout_width="wrap_content"
					android:layout_height="50dp"
					android:layout_weight="7"
					android:gravity="center|left"
					android:text="@string/_2_items_added_string"
					android:textColor="@color/white"
					android:textSize="20sp" />


				<Button
					android:id="@+id/foodItemCheckoutBtn"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_weight="3"
					android:background="@drawable/rectangle_26_shape"
					android:padding="8sp"
					android:text="@string/checkout_string"
					android:textColor="@color/black"
					android:textSize="15sp"
					/>


			</LinearLayout>

		</LinearLayout>

	</LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>