<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >

    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/dinelink_mainbg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/contentLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="35dp"
        app:layout_constraintBottom_toBottomOf="@+id/backgroundImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">


        <LinearLayout
            android:id="@+id/dinelink_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingHorizontal="55dp">

            <!-- ImageView -->
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/image_4" />

            <!-- Space view to create dynamic space -->
            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <!-- TextView -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/joti_one"
                android:text="Dine Link"
                android:textSize="40sp"
                android:textColor="#000000"/>

        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:fontFamily="@font/sahitya"
            android:gravity="center"
            android:paddingHorizontal="7dp"
            android:text="RESTAURANT LOGIN"
            android:textSize="35dp"
            android:textStyle="bold"
            android:textColor="#000000">

        </TextView>

        <LinearLayout
            android:id="@+id/dinelink_hotel_role"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/black_border_for_hotel_login"
            android:gravity="center"
            android:onClick="restaurantLogin"
            android:orientation="horizontal"
            android:paddingHorizontal="25dp"
            android:paddingVertical="5dp">

            <!-- ImageView -->
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/restaurant_icon" />

            <!-- Space view to create dynamic space -->
            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <!-- TextView -->
            <EditText
                android:id="@+id/restaurant_id"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:hint="@string/restaurant_id"
                android:textSize="25sp"
                android:inputType="number"
                android:fontFamily="@font/salsa"
                android:textColor="#000000"
                >

            </EditText>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/dinelink_customer_role"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/black_border_for_hotel_login"
            android:gravity="center"
            android:onClick="customerLogin"
            android:orientation="horizontal"
            android:paddingHorizontal="30dp"
            android:paddingVertical="5dp">


            <!-- ImageView -->
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/password_icon" />

            <!-- Space view to create dynamic space -->
            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <!-- TextView -->
            <EditText
                android:id="@+id/restaurant_password"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:hint="Password"
                android:textSize="25sp"
                android:inputType="text"
                android:fontFamily="@font/salsa"
                android:textColor="#000000"
                >

            </EditText>


        </LinearLayout>

        <Button
            android:id="@+id/restaurant_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/sahitya"
            android:text="@string/Login"
            android:textSize="30sp"
            android:textColor="#FFFFFF"
            android:background="@drawable/red_color_bg"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/itim"
            android:gravity="center"
            android:paddingHorizontal="20dp"
            android:text="@string/restaurant_login_text"
            android:textSize="25dp"
            android:textColor="#000000">

        </TextView>




    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>